# meetpi

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
src/meetpi/: main.py  web.py
src/meetpi/static/: app.js  style.css
